--- a/RoboChess/MessageControl.xaml
+++ b/RoboChess/MessageControl.xaml
@@ -14,13 +14,13 @@
                 <RowDefinition Height="40"></RowDefinition>
             </Grid.RowDefinitions>
             <Grid Grid.Row="0" Background="#EEEEEE">
-                <Label Content="Error" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="Black"/>
+                <Label Content="{Binding MessageHeader}" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="Black"/>
             </Grid>
             <Grid Grid.Row="1" Margin="10,20">
-                <TextBlock Text="{Binding ErrorMessage}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+                <TextBlock Text="{Binding Message}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
             </Grid>
             <Grid Grid.Row="2" Background="#EEEEEE">
-                <Button Content="OK" Width="80" Height="30" Command="{Binding CloseErrorMessageCommand}" />
+                <Button Content="OK" Width="80" Height="30" Command="{Binding CloseMessageCommand}" />
             </Grid>
         </Grid>
     </Grid>
