Fixed logger.  Added board rotations (just 2 for now) to C# and camera logic. The robot does not need any extra logic (though the board didn't line up perfectly with the same marks). Fixed loading game. Fixed some TCP connectivity issues. Handled noise from camera as best as possible.

--- a/RoboChess/MainWindow.xaml
+++ b/RoboChess/MainWindow.xaml
@@ -128,7 +128,7 @@
                 </ScrollViewer>
                 <Label Content="Log" Grid.Row="0" Grid.Column="1"/>
                 <ScrollViewer Canvas.Left="12" Canvas.Top="12" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Stretch" h:AutoScrollBehavior.AutoScroll="True">
-                    <TextBox IsReadOnly="True" TextWrapping="Wrap" Text="{Binding Read}"/>
+                    <TextBox IsReadOnly="True" TextWrapping="Wrap" Text="{Binding Logger}"/>
                 </ScrollViewer>
             </Grid>
         </Grid>
